--- a/ScreamControl_WPF/App.config
+++ b/ScreamControl_WPF/App.config
@@ -2,14 +2,14 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="ScreamControl_WPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="ScreamControl_Control.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
     </startup>
     <userSettings>
-        <ScreamControl_WPF.Properties.Settings>
+        <ScreamControl_Control.Properties.Settings>
             <setting name="DefaultLanguage" serializeAs="String">
                 <value>en-US</value>
             </setting>
@@ -28,6 +28,6 @@
             <setting name="Threshold" serializeAs="String">
                 <value>80</value>
             </setting>
-        </ScreamControl_WPF.Properties.Settings>
+        </ScreamControl_Control.Properties.Settings>
     </userSettings>
 </configuration>
