Hotkey class, alerting toggle, renamed .exe, icon

--- a/ScreamControl_WPF/Properties/Settings.settings
+++ b/ScreamControl_WPF/Properties/Settings.settings
@@ -20,5 +20,11 @@
     <Setting Name="Threshold" Type="System.Single" Scope="User">
       <Value Profile="(Default)">80</Value>
     </Setting>
+    <Setting Name="Enabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="StealthMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
