--- a/ScreamControl_WPF/App.config
+++ b/ScreamControl_WPF/App.config
@@ -3,7 +3,6 @@
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="ScreamControl_Client.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="ScreamControl_Control.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
@@ -26,35 +25,18 @@
             <setting name="AlertOverlayDelay" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="Threshold" serializeAs="String">
-                <value>80</value>
-            </setting>
             <setting name="Enabled" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="StealthMode" serializeAs="String">
                 <value>False</value>
             </setting>
-        </ScreamControl_Client.Properties.Settings>
-        <ScreamControl_Control.Properties.Settings>
-            <setting name="DefaultLanguage" serializeAs="String">
-                <value>en-US</value>
-            </setting>
-            <setting name="Boost" serializeAs="String">
-                <value>100</value>
-            </setting>
-            <setting name="Volume" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="SafeScreamZone" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="AlertOverlayDelay" serializeAs="String">
-                <value>0</value>
-            </setting>
             <setting name="Threshold" serializeAs="String">
-                <value>80</value>
+                <value>0</value>
             </setting>
-        </ScreamControl_Control.Properties.Settings>
+            <setting name="VolumeSystem" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </ScreamControl_Client.Properties.Settings>
     </userSettings>
 </configuration>
