Added basic connection class; added logging to alarm system, app and MainWindow; changed autostart from registry to autorun folder; stealth at startup; system volume  small fix

--- a/ScreamControl_WPF/ScreamControl_Client.csproj
+++ b/ScreamControl_WPF/ScreamControl_Client.csproj
@@ -134,6 +134,8 @@
     <Compile Include="Classes\ExtendedVersion.cs" />
     <Compile Include="Classes\Hotkey.cs" />
     <Compile Include="Classes\Math.cs" />
+    <Compile Include="Classes\SCNetworkClient.cs" />
+    <Compile Include="Classes\Startup.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Classes\AlarmSystem.cs" />
     <Page Include="Language\lang.en-US.xaml">
@@ -214,6 +216,26 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="IWshRuntimeLibrary">
+      <Guid>{F935DC20-1CF0-11D0-ADB9-00C04FD58A0B}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Shell32">
+      <Guid>{50A7E9B0-70EF-11D1-B75A-00A0C90564FE}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
