--- a/ScreamControl_WPF/App.config
+++ b/ScreamControl_WPF/App.config
@@ -39,4 +39,11 @@
             </setting>
         </ScreamControl_Client.Properties.Settings>
     </userSettings>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="logListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="log.txt"></add>
+      </listeners>
+    </trace>
+  </system.diagnostics>
 </configuration>
