Huge changes (probably needed more comits for this situations, my bad): enabling/disabling sound/message alert; some fixes in alertoverlay disable behaviour; changed interface a little;

--- a/ScreamControl_WPF/App.config
+++ b/ScreamControl_WPF/App.config
@@ -25,7 +25,7 @@
             <setting name="AlertOverlayDelay" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="Enabled" serializeAs="String">
+            <setting name="SoundAlertEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="StealthMode" serializeAs="String">
@@ -36,6 +36,9 @@
             </setting>
             <setting name="VolumeSystem" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="MessageAlertEnabled" serializeAs="String">
+                <value>False</value>
             </setting>
         </ScreamControl_Client.Properties.Settings>
     </userSettings>
