--- a/ScreamControl_WPF/ScreamControl_Client.csproj
+++ b/ScreamControl_WPF/ScreamControl_Client.csproj
@@ -132,8 +132,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Classes\ExtendedVersion.cs" />
+    <Compile Include="Classes\Helpers.cs" />
     <Compile Include="Classes\Hotkey.cs" />
-    <Compile Include="Classes\Math.cs" />
     <Compile Include="Classes\SCNetworkClient.cs" />
     <Compile Include="Classes\Startup.cs" />
     <Compile Include="Settings.cs" />
