--- a/ScreamControl_WPF/Properties/Settings.settings
+++ b/ScreamControl_WPF/Properties/Settings.settings
@@ -17,7 +17,7 @@
     <Setting Name="AlertOverlayDelay" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="Enabled" Type="System.Boolean" Scope="User">
+    <Setting Name="SoundAlertEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="StealthMode" Type="System.Boolean" Scope="User">
@@ -28,6 +28,9 @@
     </Setting>
     <Setting Name="VolumeSystem" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="MessageAlertEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
