--- a/ScreamControl_WPF/App.config
+++ b/ScreamControl_WPF/App.config
@@ -49,4 +49,7 @@
       </listeners>
     </trace>
   </system.diagnostics>
+  <system.web>  
+    <compilation debug="true" />  
+  </system.web>  
 </configuration>
