--- a/ScreamControl_Client/App.config
+++ b/ScreamControl_Client/App.config
@@ -16,7 +16,7 @@
             <setting name="Boost" serializeAs="String">
                 <value>100</value>
             </setting>
-            <setting name="Volume" serializeAs="String">
+            <setting name="AlarmVolume" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="SafeScreamZone" serializeAs="String">
@@ -25,7 +25,7 @@
             <setting name="AlertOverlayDelay" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="SoundAlertEnabled" serializeAs="String">
+            <setting name="IsSoundAlertEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="StealthMode" serializeAs="String">
@@ -34,10 +34,10 @@
             <setting name="Threshold" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="VolumeSystem" serializeAs="String">
+            <setting name="AlarmSystemVolume" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="MessageAlertEnabled" serializeAs="String">
+            <setting name="IsOverlayAlertEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
         </ScreamControl_Client.Properties.Settings>
