--- a/ScreamControl_Client/Properties/Settings.settings
+++ b/ScreamControl_Client/Properties/Settings.settings
@@ -8,7 +8,7 @@
     <Setting Name="Boost" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
-    <Setting Name="Volume" Type="System.Int32" Scope="User">
+    <Setting Name="AlarmVolume" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="SafeScreamZone" Type="System.Int32" Scope="User">
@@ -17,7 +17,7 @@
     <Setting Name="AlertOverlayDelay" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="SoundAlertEnabled" Type="System.Boolean" Scope="User">
+    <Setting Name="IsSoundAlertEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="StealthMode" Type="System.Boolean" Scope="User">
@@ -26,10 +26,10 @@
     <Setting Name="Threshold" Type="System.Single" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="VolumeSystem" Type="System.Int32" Scope="User">
+    <Setting Name="AlarmSystemVolume" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="MessageAlertEnabled" Type="System.Boolean" Scope="User">
+    <Setting Name="IsOverlayAlertEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
