seems like all set up for controller implementation

--- a/ScreamControl.View/ScreamControl.View.csproj
+++ b/ScreamControl.View/ScreamControl.View.csproj
@@ -57,13 +57,21 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ViewHelpers.cs" />
-    <Compile Include="Startup.cs" />
+    <Compile Include="Helpers\ViewHelpers.cs" />
+    <Compile Include="Helpers\Startup.cs" />
+    <Page Include="Language\lang.en-US.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Language\lang.ru-RU.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="Hotkey.cs" />
+    <Compile Include="Helpers\Hotkey.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -124,7 +132,6 @@
       <Name>SharedStuff</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="..\SharedProject\SharedProject.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
