begin controller implementation

--- a/ScreamControl_Control/App.config
+++ b/ScreamControl_Control/App.config
@@ -9,6 +9,38 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
     </startup>
     <userSettings>
+        <ScreamControl_Control.Properties.Settings>
+            <setting name="DefaultLanguage" serializeAs="String">
+                <value>en-US</value>
+            </setting>
+            <setting name="Boost" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="AlarmVolume" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SafeScreamZone" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="AlertOverlayDelay" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Threshold" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="AlarmSystemVolume" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="IsOverlayAlertEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="IsSoundAlertEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StealthMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </ScreamControl_Control.Properties.Settings>
         <ScreamControl_WPF.Properties.Settings>
             <setting name="DefaultLanguage" serializeAs="String">
                 <value>en-US</value>
