--- a/ScreamControl_ClientTests/ScreamControl_ClientTests.csproj
+++ b/ScreamControl_ClientTests/ScreamControl_ClientTests.csproj
@@ -57,9 +57,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ScreamControl_Client\ScreamControl_Client.csproj">
+    <ProjectReference Include="..\ScreamControl_Client\ScreamControl.Client.csproj">
       <Project>{1DA774DC-D988-4058-B9BF-CBEBA7BAC32C}</Project>
-      <Name>ScreamControl_Client</Name>
+      <Name>ScreamControl.Client</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
